Fix alignment on pagination

--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -177,11 +177,20 @@ figure {
   list-style: none;
   display: flex;
   align-items: center;
-  justify-content: space-between;
   gap: .25rem;
   padding: .5rem 0;
+  li {
+    flex: 1;
+  }
+  li:not(:has(a)) {
+    text-align: center;
+    flex: 1;
+  }
+  li:last-of-type {
+    text-align: right;
+  }
   a {
-    display: block;
+    display: inline-block;
     text-align: center;
     border-radius: 4px;
     text-decoration: none;
